yc-el (5.0.0-7) unstable; urgency=medium

  * Added Dependency emacs25 (closes: #852100)
  * Do work for dbgsym package
  * Added debug compile option

 -- Yukiharu YABUKI <yyabuki@debian.org>  Thu, 26 Jan 2017 00:09:33 +0900

yc-el (5.0.0-6) unstable; urgency=low

  * Add Dependcy emacs24 (Closes: #764161)

 -- Yukiharu YABUKI <yyabuki@debian.org>  Mon, 06 Oct 2014 09:48:51 +0900

yc-el (5.0.0-5) unstable; urgency=low

  * Correct DEP-3 header (Cloeses: #681366)

 -- Yukiharu YABUKI <yyabuki@debian.org>  Fri, 13 Jul 2012 02:21:51 +0900

yc-el (5.0.0-4) unstable; urgency=low

  * Apply bug fix which Upstream fixed bug. (version 5.2.1)

 -- Yukiharu YABUKI <yyabuki@debian.org>  Tue, 12 Jul 2012 01:09:51 +0900

yc-el (5.0.0-3) unstable; urgency=low

  * Change section
  * Improve debian/patches --- names

 -- Yukiharu YABUKI <yyabuki@debian.org>  Tue, 11 Jul 2012 07:42:51 +0900

yc-el (5.0.0-2) unstable; urgency=low

  [ Yukiharu YABUKI ]
  * remove lintian warnning

 -- Yukiharu YABUKI <yyabuki@debian.org>  Mon, 10 Jul 2012 02:05:51 +0900

yc-el (5.0.0-1) unstable; urgency=low

  [ Yukiharu YABUKI ]
  * New Upstream
  * Removed Dependency of Emacs 22 (closes: #577468)
  * Added Dependency of Emacs 23
  * Adapting for Emacs 23 (Thanks Kouichi ONO-san)
  * Converted to source format version 3

 -- Yukiharu YABUKI <yyabuki@debian.org>  Wed, 21 Jul 2010 14:30:51 +0900

yc-el (4.0.13-9) unstable; urgency=low

  [ Yukiharu YABUKI ]
  * Update Standards-version (3.8.2)
   - (1) update compat = 5
   - (2) ignore rm error in Makefile. When rm does not find target.
   - (3) add copyright year in debian/copyright.
   - (4) fix lintian error in debian/rules
   - (5) Use dh_prep instead of dh_clean -k.
   - (6) Update Build-Depends debhelper version in debian/control.
  
 -- Yukiharu YABUKI <yabuki@netfort.gr.jp>  Sun, 28 Jun 2009 01:02:54 +0900

yc-el (4.0.13-8) unstable; urgency=low

  * fixed: yc-el handling nostrip build option. (closes: #438354)